--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,8 @@ dependencies = [
     "langchain-core>=0.2.1",
     "langchain-openai>=0.2.1",
     "langchain-community-tools>=0.2.1",
+    "websockets>=11.1",
+    "httpx>=0.25.3",
+    "elevenlabs>=1.51.0",
+    "langgraph-sdk>=0.1.53",
 ]
