pyproject.toml app.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,5 @@ dependencies = [
     "requests>=2.32.3",
     "sqlalchemy>=2.0.38",
     "streamlit>=1.42.2",
-    "twilio>=9.4.6",
-    "web3>=7.8.0",
+    "twilio>=9.4.6"
 ]
